--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.16.6",
     "axios": "^1.3.6",
+    "bootstrap": "^5.2.3",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
