--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,14 @@
     "antd": "^5.6.2",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
-    "i": "^0.3.7",
-    "install": "^0.13.0",
-    "npm": "^9.7.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
-    "web-vitals": "^2.1.4",
-    "world_countries_lists": "^2.8.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
