--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0"
   }
