--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^6.0.2",
     "web-vitals": "^2.1.4"
   },
