--- a/client/package.json
+++ b/client/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^5.1.2",
+    "@ant-design/icons": "^5.1.4",
+    "@splidejs/react-splide": "^0.7.12",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.6.2",
-    "axios": "^1.3.6",
-    "bootstrap": "^5.2.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@tinymce/tinymce-react": "^4.3.0",
+    "antd": "^5.6.4",
+    "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
-    "react-grid-carousel": "^1.0.1",
-    "react-quill": "^2.0.0",
-    "react-router-dom": "^6.11.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.14.1",
     "react-star-ratings": "^2.3.0",
-    "styled-components": "^6.0.2",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.11",
+    "web-vitals": "^3.3.2"
   },
-  "resolutions": {
-    "styled-components": "^5"
+  "devDependencies": {
+    "react-scripts": "^5.0.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
+  "resolutions": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
