--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,15 @@
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^3.3.2"
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-scripts": "^5.0.1"
   },
   "resolutions": {},
   "scripts": {
