--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
+    "payu-sdk-node-index-fixed": "^1.1.1",
     "pg": "^8.10.0"
   }
 }
