--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
