Redesigned Orders Page and Fixed bugs in other. login check for each profile component

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,11 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
+  },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@splidejs/react-splide": "^0.7.12",
