--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tinymce/tinymce-react": "^4.3.0",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
